--- a/README
+++ b/README
@@ -94,3 +94,22 @@ Problems with JSON:
 
 	The overhead of quoting every key in {"key": value} even when key is not a
 	reserved word in JavaScript is annoying.
+
+
+
+Other cool Minerva features you won't find anywhere else:
+
+	Minerva can respond to TCP pressure using Twisted's producer/consumer system.
+	You can easily stream megabytes of frames to a client while using little memory
+	on the server. Responding to TCP pressure is useful, because it will save the client
+	from having to send application-level "back off" / "ok, resume" messages.
+
+	When Minerva needs to use HTTP transports, it tries its best to use a maximum
+	of two TCP connections. It can do this because it understands when browsers
+	will have to open a new TCP connection for a request.
+
+	The Minerva JavaScript client will avoid aborting HTTP connections. Aborting an HTTP
+	connection from the client is bad because it necessitates closing the TCP connection.
+	This is bad because the next HTTP request would (likely) require a new TCP connection,
+	which requires a 3-way handshake.
+
