--- a/README
+++ b/README
@@ -189,19 +189,19 @@ Real-world deployment strategy that supports HTTP, Flash Socket, WebSocket:
 	WebSocket on port 443, because this has a fighting chance of making it through an HTTPS
 	CONNECT proxy [3].
 
-	If you want Web Socket (SSL), you'll need the second additional IP. This restriction could be
+	If you want Web Socket (SSL), you'll need the second additional IP. This requirement could be
 	lifted [5], but it is very low priority.
 
 	To summarize port-sharing, SSL and non-SSL listeners cannot share the same port.
-	Because Flash Socket (ciphered + unencrypted) is not SSL, it can share the same port as
+	Because Flash Socket (ciphered + unencrypted) is not SSL, it shares the same port as
 	WebSocket (unencrypted)
 
 	Minerva's web resources (for long-polling/HTTP streaming) should be behind a hardened webserver
 	like nginx. Compared to twisted.web, nginx is a bit harder to DoS, handles more compatibility
-	problems, and maintains an SSL session cache [4]. These advantages (probably)
-	outweigh the overhead of connecting to a Unix domain socket for every long-polling/
-	streaming HTTP request. In the future, we may move more of Minerva's HTTP
-	functionality into nginx, in the spirit of nginx_http_push_module [2]
+	problems, and maintains an SSL session cache [4]. These advantages probably
+	outweigh the overhead of an open socket for every long-polling/streaming HTTP request.
+	In the future, we may move more of Minerva's HTTP functionality into nginx, in the spirit
+	of nginx_http_push_module [2]
 
 	Here is a reasonable setup for a small website:
 
@@ -210,22 +210,29 @@ Real-world deployment strategy that supports HTTP, Flash Socket, WebSocket:
 			is serving web resources, one of which is a newlink.HttpFace
 
 		Twisted process running:
-			newlink.HttpFace, listening on Unix socket or TCP port for upstream proxy.
+			newlink.HttpFace, listening on a Unix socket or TCP port for upstream
+				proxy (often nginx).
 			newlink.SocketFace, listening on 80, 443, 843, <extra ports> on IP1.
-			newlink.SocketFace + SSL, istening on 80, 443, <extra ports> on IP2.
+			newlink.SocketFace + SSL, listening on 80, 443, <extra ports> on IP2.
 
 	Why listen on port 843? SocketFace serves Flash socket policy files when asked.
 	843 is the port where Flash first looks for a Socket master policy file. [6] If Flash
-	player cannot get the policy from port 843, it will try to get the policy from the connection
-	destination port. But by serving the policy on port 843, we reduce the time needed
-	to establish the first connection.
+	player cannot get the policy file from port 843, it will try to get the policy from the
+	connection destination port. But by serving the policy on port 843, we reduce the
+	time needed to establish the first connection.
 
-	Note that Flash Socket cannot connect to the `+ SSL' services, so we do not need
-	to have SocketFace listen on 843 on IP2.
+		Note: 843 is used for Minerva data transmission as well, but typically only as
+		a fallback. It's not restricted to just serving the policy file.
 
-	Suggested <extra ports> for listening:
+	Note that Flash Socket cannot connect to the `+ SSL' listener (right now it is just for
+	WebSocket SSL), so we do not need to have SocketFace listen on port 843 on IP2.
+
+	Optional <extra ports> for listening:
+		21 (ftp), 22 (ssh), 110 (pop3), 143 (imap), 465 (SMTPs - MS),
+		843 (Flash master policy port) 993 (imap+ssl), 995 (pop3+ssl)
 		
 		TODO: find which ports are likely to be unblocked by proxies
+		TODO: test if browsers actually connect to these ports when Flash player asks
 
 
 	Also, keep in mind that SSL connections will use a lot more memory compared to
